--- a/styles/abstracts/_general.module.scss
+++ b/styles/abstracts/_general.module.scss
@@ -1,1 +1,2 @@
-$padding-safe: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+$padding-safe: 0 env(safe-area-inset-right) 0 env(safe-area-inset-left);
+$inverted-padding-safe: 0 calc(-1 * env(safe-area-inset-right)) 0 calc(-1 * env(safe-area-inset-left));
